# DiplomSkyProSokolovE.A

./: README.md  pyproject.toml
document_search_service/: .env  Dockerfile  db.sqlite3  docker-compose.yml  load_data.py  manage.py  requirements.txt
document_search_service/config/: settings.py  urls.py
document_search_service/documents/: documents_indexes.py  models.py  serializers.py  services.py  swagger.py  urls.py  utils.py  views.py
document_search_service/documents/migrations/: 0001_initial.py  0002_post_delete_document.py
