[tool.poetry]
name = "document-search-service"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
elasticsearch = "^8.13.1"
drf-yasg = "^1.21.7"
django-elasticsearch-dsl = "^8.0"
asgiref = "^3.8.1"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
